# target-shopper-skill

./: .clawhubignore  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
references/: categories.md  endpoints.md  status-codes.md  tos-and-etiquette.md
scripts/: _auth.py  _common.py  cart_link.py  fulfillment.py  pdp.py  reviews.py  search.py  stores.py  summary.py
tests/: conftest.py  test_cart_link.py  test_live_smoke.py  test_offline.py
tests/fixtures/: fulfillment.json  pdp.json  reviews.json  search.json  stores.json  summary.json
